--- a/.github/workflows/daily-post.yml
+++ b/.github/workflows/daily-post.yml
@@ -27,7 +27,10 @@ jobs:
 
       - name: Run Bot Script
         env:
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GROQ_API_KEY_1: ${{ secrets.GROQ_API_KEY_1 }}
+            GROQ_API_KEY_2: ${{ secrets.GROQ_API_KEY_2 }}
+            GROQ_API_KEY_3: ${{ secrets.GROQ_API_KEY_3 }}
+            GROQ_API_KEY_4: ${{ secrets.GROQ_API_KEY_4 }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python bot/main.py
