--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "astro": "^4.0.0",
     "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/rss": "^4.0.0",
     "firebase": "^10.8.0"
   }
 }
